# game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.am  README.md  configure.ac
SDL2/: sdl2-config.cmake
data/models/cube/: cube.mtl
data/models/wooden_boxbarrel/: wooden_box_and_barrel.blend  wooden_box_and_barrel.mtl
data/shaders/: fragment.glsl  geometry.glsl  pbrFragment.glsl  pbrVertex.glsl  vertex.glsl
glew/: glew-config.cmake
src/: Chunk.cpp  Chunk.h  ChunkMCMeshBuilder.cpp  ChunkMCMeshBuilder.h  Error.cpp  Error.h  MarchingCubeChunkRenderer.cpp  MarchingCubeChunkRenderer.h  MarchingCubeShapeMap.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PlayerCamera.cpp  PlayerCamera.h  ShaderLoader.cpp  ShaderLoader.h  Terrain.cpp  Terrain.h  fragment.glsl  main.cpp  vertex.glsl
src/helpers/: RootDir.h  RootDir.h.in
